New entries should be added at the top

2005-06-06 Added autoscale_on prop to axes

2005-06-06 Added Nick's picker "among" patch - JDH

2005-06-05 Fixed a TeX/LaTeX font discrepency in backend_ps. - DSD

2005-06-05 Added a ps.distill option in rc settings. If True, postscript
           output will be distilled using ghostscript, which should trim
           the file size and allow it to load more quickly. Hopefully this
           will address the issue of large ps files due to font 
           definitions. Tested with gnu-ghostscript-8.16. - DSD

2005-06-03 Improved support for tex handling of text in backend_ps. - DSD 

2005-06-03 Added rc options to render text with tex or latex, and to select 
           the latex font package. - DSD

2005-06-03 Fixed a bug in ticker.py causing a ZeroDivisionError

2005-06-02 backend_gtk.py remove DBL_BUFFER, add line to expose_event to
           try to fix pygtk 2.6 redraw problem - SC

2005-06-01 The default behavior of ScalarFormatter now renders scientific 
           notation and large numerical offsets in a label at the end of 
           the axis. - DSD

2005-06-01 Added Nicholas' frombyte image patch - JDH

2005-05-31 Added vertical TeX support for agg - JDH

2005-05-31 Applied Eric's cntr patch - JDH

2005-05-27 Finally found the pesky agg bug (which Maxim was kind
           enough to fix within hours) that was causing a segfault in
           the win32 cached marker drawing.  Now windows users can get
           the enormouse performance benefits of caced markers w/o
           those occasional pesy screenshots. - JDH

2005-05-27 Got win32 build system working again, using a more recent
           version of gtk and pygtk in the win32 build, gtk 2.6 from
           http://www.gimp.org/~tml/gimp/win32/downloads.html (you
           will also need libpng12.dll to use these).  I haven't
           tested whether this binary build of mpl for win32 will work