@@ -1,5 +1,7 @@
 New entries should be added at the top
 
+2005-06-07 Fixed a bug in texmanager.py: .aux files not being removed - DSD
+
 2005-06-06 Added autoscale_on prop to axes
 
 2005-06-06 Added Nick's picker "among" patch - JDH
